Make jfrog-url input optional with default value
Changed jfrog-url input to be optional with a default value.

--- a/.github/workflows/jfrog-artifact-upload.yml
+++ b/.github/workflows/jfrog-artifact-upload.yml
@@ -9,7 +9,8 @@ on:
       jfrog-url:
         description: URL to JFrog platform
         type: string
-        required: true
+        required: false
+        default: 'https://hts2.jfrog.io'
       jfrog-repository:
         description: JFrog local repository to authenticate and publish
         type: string
